# tutoPypi

./: README.md  mkdocs.yml  pyproject.toml
docs/: explanation.md  index.md  reference.md  tutorials.md
src/tutoPypi/: main.py
src/tutoPypi/libs/: __init__.py  myLib.py
